k8s-social-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-social
  labels:
    name: simple-social
    environment: production
